force-app/main/default/objects/Opportunity/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF( Probability &lt;= 0.4, &apos;Cold&apos;, IF(Probability &gt; 0.6, &apos;Hot&apos;, &apos;Warm&apos;) )</formula>
    <label>Rating</label>
    <type>Text</type>
</CustomField>