force-app/main/default/objects/Opportunity/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>Lead Remark</description>
    <label>Remark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>