force-app/main/default/objects/Opportunity/fields/Requirement_Count__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Count__c</fullName>
    <label>Requirement Count</label>
    <summaryForeignKey>Questionnaire_for_Opportunity__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>