force-app/main/default/objects/Opportunity/fields/SalesConfidence__c.field-meta.xml
<CustomField>
    <fullName>SalesConfidence__c</fullName>
    <label>Sales Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reasonably Confident</fullName>
            </value>
            <value>
                <fullName>100% Confident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>