force-app/main/default/objects/Opportunity/fields/SecondaryCampaignSource__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCampaignSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Secondary Campaign Source)</relationshipLabel>
    <relationshipName>SecondaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>