force-app/main/default/objects/Opportunity/fields/SecondarySourceCreditAllocation__c.field-meta.xml
<CustomField>
    <fullName>SecondarySourceCreditAllocation__c</fullName>
    <label>Secondary Source Credit Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>