force-app/main/default/objects/Opportunity/fields/Support_Required_Remark__c.field-meta.xml
<CustomField>
    <fullName>Support_Required_Remark__c</fullName>
    <label>Support Required Remark</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>