force-app/main/default/objects/Opportunity/fields/SupportTo__c.field-meta.xml
<CustomField>
    <fullName>SupportTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>