force-app/main/default/objects/Opportunity/fields/SupporttoCustomerName__c.field-meta.xml
<CustomField>
    <fullName>SupporttoCustomerName__c</fullName>
    <label>Support to Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>