force-app/main/default/objects/Opportunity/fields/TenderRFP__c.field-meta.xml
<CustomField>
    <fullName>TenderRFP__c</fullName>
    <label>Tender/RFP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pre-Tender/RFP Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>