force-app/main/default/objects/Opportunity/fields/TertiaryCampaignSource__c.field-meta.xml
<CustomField>
    <fullName>TertiaryCampaignSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Tertiary Campaign Source)</relationshipLabel>
    <relationshipName>TertiaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>