force-app/main/default/objects/Opportunity/fields/TertiaryPartnerGroupId__c.field-meta.xml
<CustomField>
    <fullName>TertiaryPartnerGroupId__c</fullName>
    <label>TertiaryPartnerGroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>