force-app/main/default/objects/Opportunity/fields/TertiarySource__c.field-meta.xml
<CustomField>
    <fullName>TertiarySource__c</fullName>
    <label>Tertiary Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Partner</fullName>
            </value>
            <value>
                <fullName>Reseller Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Consultant Partner</fullName>
            </value>
            <value>
                <fullName>Distributor Partner-Commission</fullName>
            </value>
            <value>
                <fullName>Distributor Partner-TP</fullName>
            </value>
            <value>
                <fullName>Business Partner</fullName>
            </value>
            <value>
                <fullName>ERP Partner-Commission</fullName>
            </value>
            <value>
                <fullName>ERP Partner-TP</fullName>
            </value>
            <value>
                <fullName>ERP Technology Partner B2B</fullName>
            </value>
            <value>
                <fullName>YIC Partner</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Business Development - Digital</fullName>
            </value>
            <value>
                <fullName>Leadership Leads</fullName>
            </value>
            <value>
                <fullName>Government Partner - TP</fullName>
            </value>
            <value>
                <fullName>Government Partner - Commission</fullName>
            </value>
            <value>
                <fullName>Government Partner - Technology B2B</fullName>
            </value>
            <value>
                <fullName>YCIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>