force-app/main/default/objects/Opportunity/fields/TertiarySourceCreditAllocation__c.field-meta.xml
<CustomField>
    <fullName>TertiarySourceCreditAllocation__c</fullName>
    <label>Tertiary Source Credit Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>