force-app/main/default/objects/Opportunity/fields/TotalDealValue__c.field-meta.xml
<CustomField>
    <fullName>TotalDealValue__c</fullName>
    <label>Total Deal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>