force-app/main/default/objects/Opportunity/fields/Which_Stakeholders_Support_is_Required__c.field-meta.xml
<CustomField>
    <fullName>Which_Stakeholders_Support_is_Required__c</fullName>
    <inlineHelpText>Select the stakeholder&apos;s team from whom you need support.</inlineHelpText>
    <label>Which Stakeholder&apos;s Support is Required?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BU-Application Services</fullName>
            </value>
            <value>
                <fullName>BU-Colo &amp; Customer DC Build</fullName>
            </value>
            <value>
                <fullName>BU-Core Cloud Services</fullName>
            </value>
            <value>
                <fullName>BU-Cyber Security Services</fullName>
            </value>
            <value>
                <fullName>BU-Extended &amp; Federated Cloud &amp; InfraManage Services</fullName>
            </value>
            <value>
                <fullName>BU-Network Services</fullName>
            </value>
            <value>
                <fullName>SE-Solutions Team</fullName>
            </value>
            <value>
                <fullName>SE-Bids Team</fullName>
            </value>
            <value>
                <fullName>SE-Pricing Team</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Promoters</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Service Assurance</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>DC Operations</fullName>
            </value>
            <value>
                <fullName>GRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>