force-app/main/default/objects/Opportunity/fields/YottaIndustry__c.field-meta.xml
<CustomField>
    <fullName>YottaIndustry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>