force-app/main/default/objects/Opportunity/validationRules/Account_Owner_Can_Create_Opportunities.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner_Can_Create_Opportunities</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISNEW(),
 $User.Id &lt;&gt;  Account.OwnerId,
 NOT(Converted_Opportunity__c),
 NOT( CONTAINS( $Profile.Name, &quot;Admin&quot;))
)</errorConditionFormula>
    <errorMessage>Only Account Owner can create Opportunities.</errorMessage>
</ValidationRule>