force-app/main/default/objects/Opportunity/validationRules/Cannot_Closed_Won_Amendment_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Closed_Won_Amendment_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__PrimaryQuote__r.SBQQ__Type__c , &apos;Amendment&apos;) ,   NOT(ISBLANK(SBQQ__PrimaryQuote__c) ),
  ISCHANGED(StageName) ,
 ISPICKVAL(StageName  , &apos;Closed Won&apos;),
NOT(ISPICKVAL(SBQQ__PrimaryQuote__r.SCF_Approval_Status__c,&apos;Approved&apos;))
)</errorConditionFormula>
    <errorMessage>Cannot Close Won Amendment Opportunity where Quote is Not Approved by OMT</errorMessage>
</ValidationRule>