force-app/main/default/objects/Opportunity/validationRules/Cannot_Update_Source_Section.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Source_Section</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNEW()) , OR(ISCHANGED(PrimarySource__c),
ISCHANGED(SecondarySource__c),
ISCHANGED(Primary_Campaign_Source__c),
ISCHANGED(SecondaryCampaignSource__c),
ISCHANGED(TertiaryCampaignSource__c),
ISCHANGED(PrimarySourceCreditAllocation__c),
ISCHANGED(SecondarySourceCreditAllocation__c),
ISCHANGED(TertiarySourceCreditAllocation__c),
ISCHANGED(PrimarySourceCreditAllocation__c),
ISCHANGED(SecondarySourceCreditAllocation__c),
ISCHANGED(TertiarySourceCreditAllocation__c),
ISCHANGED(Partner_Commision_Model__c),
ISCHANGED(OEM_Company_Name__c),
ISCHANGED(OEM_Lead_Shared_By__c),
ISCHANGED(PartnerPrimary__c),
ISCHANGED(PartnerSecondary__c),
ISCHANGED(PartnerTertiary__c),
ISCHANGED(Partner_Sales_Rep__c),
ISCHANGED(Distributor_Partner_Name__c)),
NOT(  OR(
CONTAINS( $Profile.Name , &apos;System Administrator&apos;),
CONTAINS( $User.Alias , &apos;autoproc&apos;),
CONTAINS( $Profile.Name , &apos;Yotta IS Profile&apos;),
CONTAINS( $Profile.Name , &apos;Yotta Sales Head Profile&apos;),
CONTAINS( $Profile.Name , &apos;Yotta Partner Manager Profile&apos;))))</errorConditionFormula>
    <errorMessage>Cannot update Source Section</errorMessage>
</ValidationRule>