force-app/main/default/objects/Opportunity/validationRules/Cant_close_won_as_KYC_is_not_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_close_won_as_KYC_is_not_approved</fullName>
    <active>true</active>
    <errorConditionFormula>IsWon &amp;&amp;
NOT(ISPICKVAL(Account.KYC_Approval_Status__c , &quot;Approved&quot;))</errorConditionFormula>
    <errorMessage>Account KYC is Not Approved, kindly upload KYC documents under the accounts.</errorMessage>
</ValidationRule>