force-app/main/default/objects/Opportunity/validationRules/Closed_Remarks_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Remarks_Mandatory</fullName>
    <active>true</active>
    <description>Closed Remarks are mandatory at Closed Won/Lost and Deferred/No Requirement</description>
    <errorConditionFormula>AND(
  ISBLANK( ClosedRemarks__c ),
  OR(
    ISPICKVAL( StageName ,&apos;Closed Won&apos;),
    ISPICKVAL( StageName ,&apos;Closed Lost&apos;),
    ISPICKVAL( ClosedReason__c ,&apos;Deferred&apos;),
    ISPICKVAL( ClosedReason__c ,&apos;No Requirement&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Closed Remarks mandatory at this stage!</errorMessage>
</ValidationRule>