force-app/main/default/objects/Opportunity/validationRules/Contract_Period_cannot_be_greater_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Period_cannot_be_greater_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(POC__c  , &apos;Yes&apos;) &amp;&amp;  Number_Of_Months__c &gt; 12</errorConditionFormula>
    <errorMessage>Contract Period cannot be more than a year in case of POC.</errorMessage>
</ValidationRule>