force-app/main/default/objects/Opportunity/validationRules/Only_TP_Model_is_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_TP_Model_is_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(POC__c,&apos;No&apos;),	
				ISCHANGED(Partner_Commision_Model__c),
				OR(
    OR(ISPICKVAL(PrimarySource__c,&apos;Distributor Partner-TP&apos;),ISPICKVAL(PrimarySource__c, &apos;Alliance Partner&apos;)),
    OR(ISPICKVAL(SecondarySource__c,&apos;Distributor Partner-TP&apos;),ISPICKVAL(SecondarySource__c, &apos;Alliance Partner&apos;)),
    OR(ISPICKVAL(TertiarySource__c,&apos;Distributor Partner-TP&apos;),ISPICKVAL(TertiarySource__c, &apos;Alliance Partner&apos;))), 
    ISPICKVAL(Partner_Commision_Model__c,&apos;TP&apos;),ISPICKVAL(PRIORVALUE(Partner_Commision_Model__c),&apos;&apos;))</errorConditionFormula>
    <errorMessage>Only TP Commission Model can be Selected for the given Source</errorMessage>
</ValidationRule>