force-app/main/default/objects/Opportunity/validationRules/Opportunity_on_reaching_stage_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_on_reaching_stage_Proposal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
( ISPICKVAL( StageName , &apos;Qualification&apos;) || ISPICKVAL( StageName , &apos;Needs Analysis&apos;)),
(ISPICKVAL( PRIORVALUE(StageName) ,&apos;Proposal/Price Quote&apos;) )
)</errorConditionFormula>
    <errorMessage>You cannot select &apos;Qualification or &apos;Needs Analysis&apos; once reaching &apos;Proposal/Price Quote&apos; stage on Opportunity.&apos;</errorMessage>
</ValidationRule>