force-app/main/default/objects/Opportunity/validationRules/Opty_Product_Mandatory_based_on_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Opty_Product_Mandatory_based_on_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISPICKVAL(StageName,&quot;Needs Analysis&quot;) || ISPICKVAL(StageName,&quot;Closed Won&quot;)),
 TEXT(SBQQ__PrimaryQuote__r.SBQQ__Type__c) = &quot;Quote&quot;,
HasOpportunityLineItem =False
)</errorConditionFormula>
    <errorMessage>Products should to be associated at this stage</errorMessage>
</ValidationRule>