force-app/main/default/objects/Opportunity/validationRules/Partner_is_not_Involved.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_is_not_Involved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				 ISCHANGED(Partner_Commision_Model__c) ,
 NOT(ISBLANK(TEXT(Partner_Commision_Model__c))) ,
				ISBLANK(TEXT(PRIORVALUE(Partner_Commision_Model__c))),
				 $Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>Partner is not Involved</errorMessage>
</ValidationRule>