force-app/main/default/objects/Opportunity/validationRules/Partner_is_required_if_Source_is_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_is_required_if_Source_is_Partner</fullName>
    <active>true</active>
    <description>Previous name: Primary_Secondary_Tertiary_Partner_LKUP</description>
    <errorConditionFormula>OR( 
  AND(
    CONTAINS( Text( PrimarySource__c ), &apos;Partner&apos;),
    ISBLANK( PartnerPrimary__c )
  ),
  AND(
    CONTAINS( Text( SecondarySource__c ), &apos;Partner&apos;),
    ISBLANK( PartnerSecondary__c )
  ),
  AND(
    CONTAINS( Text( TertiarySource__c ), &apos;Partner&apos;),
    ISBLANK( PartnerTertiary__c )
  )
)</errorConditionFormula>
    <errorMessage>Partner is required if Source is Partner</errorMessage>
</ValidationRule>