force-app/main/default/objects/Opportunity/validationRules/PartnerSalesRep_req_if_Source_is_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerSalesRep_req_if_Source_is_Partner</fullName>
    <active>true</active>
    <description>Partner Sales Rep is Required if Source is Partner</description>
    <errorConditionFormula>AND(OR(
    CONTAINS( Text( PrimarySource__c ), &apos;Partner&apos;),
						CONTAINS( Text( SecondarySource__c ), &apos;Partner&apos;),
						 CONTAINS( Text( TertiarySource__c ), &apos;Partner&apos;)
		),
    ISBLANK( Partner_Sales_Rep__c ),
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Type__c , &apos;Quote&apos;)
  )</errorConditionFormula>
    <errorDisplayField>Partner_Sales_Rep__c</errorDisplayField>
    <errorMessage>Partner Sales Rep is Required</errorMessage>
</ValidationRule>