force-app/main/default/objects/Opportunity/validationRules/POC_cant_be_changed_after_Quotation.validationRule-meta.xml
<ValidationRule>
    <fullName>POC_cant_be_changed_after_Quotation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( POC__c) , &apos;Yes&apos;)   &amp;&amp; 
ISCHANGED(POC__c ) &amp;&amp;  
(ISPICKVAL(StageName  , &apos;Proposal/Price Quote&apos;) || ISPICKVAL(StageName  , &apos;Negotiation/Review&apos;) || ISPICKVAL(StageName  , &apos;Draft Order&apos;) ||
 ISPICKVAL(StageName  , &apos;Closed Won&apos;) ||
 ISPICKVAL(StageName  , &apos;Closed Lost&apos;) || 
ISPICKVAL(StageName  , &apos;Closed Cancelled&apos;))</errorConditionFormula>
    <errorMessage>POC cannot be changed after Quotation is generated.</errorMessage>
</ValidationRule>