force-app/main/default/objects/Opportunity/validationRules/Prim_Sec_Tert_Marketing_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Prim_Sec_Tert_Marketing_Source</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
	AND(
		NOT(ISPICKVAL( PrimarySource__c, &apos;Marketing&apos;)),
		NOT(ISBLANK( Primary_Campaign_Source__c ))
	),
	AND(
		NOT(ISPICKVAL( SecondarySource__c, &apos;Marketing&apos;)),
		NOT(ISBLANK( SecondaryCampaignSource__c ))
	),
	AND(
		NOT(ISPICKVAL( TertiarySource__c, &apos;Marketing&apos;)),
		NOT(ISBLANK(TertiaryCampaignSource__c ))
	)
)</errorConditionFormula>
    <errorMessage>Source should be Marketing when Campaign is associated</errorMessage>
</ValidationRule>